src/objects/LostEmail__c.object
<CustomObject><fields>
        <fullName>CarbonCopies__c</fullName>
        <description>The addresses that were CC'd</description>
        <label>CarbonCopies</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Cause__c</fullName>
        <description>The error that caused this lost email to be generated.</description>
        <inlineHelpText>The error that caused this lost email to be generated.</inlineHelpText>
        <label>Cause</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>HtmlTextBody__c</fullName>
        <description>The HTML text body of the email</description>
        <label>HtmlTextBody</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>PlainTextBody__c</fullName>
        <description>The email plain text body</description>
        <label>PlainTextBody</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Recipient__c</fullName>
        <description>The recipient(s) of the email</description>
        <label>Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RejectedAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there were attachments that were rejected</description>
        <label>RejectedAttachments</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>SPAM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is marked as TRUE, the script will ignore the record and not create a Case.</description>
        <label>SPAM</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sender__c</fullName>
        <description>The sender of the email</description>
        <label>Sender</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Subject__c</fullName>
        <description>The subject of the email</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Inbound emails that were not attached to cases via the CaseInboundEmailHandler</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>LostEmail</label><nameField>
        <displayFormat>LE#{0000000000}</displayFormat>
        <label>LostEmail Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>LostEmails</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>AS_Contact_Form_Jira_ECOMM_1081</fullName>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Recipient__c</columns>
        <columns>Sender__c</columns>
        <columns>SPAM__c</columns>
        <columns>Cause__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>contains</operation>
            <value>Contact</value>
        </filters>
        <filters>
            <field>Recipient__c</field>
            <operation>startsWith</operation>
            <value>asu</value>
        </filters>
        <label>AS Contact Form - Jira ECOMM-1081</label>
    </listViews><listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Recipient__c</columns>
        <columns>Sender__c</columns>
        <columns>SPAM__c</columns>
        <columns>Subject__c</columns>
        <columns>Cause__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>All_No_Debug_Logs</fullName>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Recipient__c</columns>
        <columns>Sender__c</columns>
        <columns>SPAM__c</columns>
        <columns>Subject__c</columns>
        <columns>Cause__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>notContain</operation>
            <value>Debug Log for Case Inbound Email Handler</value>
        </filters>
        <label>All - No Debug Logs</label>
    </listViews><listViews>
        <fullName>Debug_Log_for_Cases</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>RejectedAttachments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>startsWith</operation>
            <value>Debug Log for Case Inbound Email Handler</value>
        </filters>
        <label>Debug Log for Cases</label>
    </listViews><listViews>
        <fullName>Herberger_Tours</fullName>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Recipient__c</columns>
        <columns>Sender__c</columns>
        <columns>SPAM__c</columns>
        <columns>Cause__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recipient__c</field>
            <operation>contains</operation>
            <value>herberger</value>
        </filters>
        <label>Herberger Tours</label>
    </listViews><listViews>
        <fullName>Last_Week_s_Lost_Emails</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>SPAM__c</columns>
        <columns>Recipient__c</columns>
        <columns>Sender__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>notEqual</operation>
            <value>toonice</value>
        </filters>
        <filters>
            <field>Subject__c</field>
            <operation>notContain</operation>
            <value>Debug Log for Case Inbound Email Handler</value>
        </filters>
        <label>2-Last Week's Lost Emails</label>
    </listViews><listViews>
        <fullName>Lost_Emails_Marketing_Cloud</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Recipient__c</columns>
        <columns>Sender__c</columns>
        <columns>Cause__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>toonice</value>
        </filters>
        <label>Lost Emails - Marketing Cloud</label>
    </listViews><listViews>
        <fullName>Lost_Emails_No_Case_Created</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SPAM__c</columns>
        <columns>Recipient__c</columns>
        <columns>Sender__c</columns>
        <columns>Cause__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>notContain</operation>
            <value>HAL,DRS,Debug Log for Case</value>
        </filters>
        <filters>
            <field>SPAM__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Lost Emails - No Case Created</label>
    </listViews><listViews>
        <fullName>Lost_Emails_No_Subject</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Recipient__c</columns>
        <columns>Sender__c</columns>
        <columns>Cause__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subject__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>12/10/2015 12:00 AM</value>
        </filters>
        <label>Lost Emails - No Subject</label>
    </listViews><listViews>
        <fullName>This_Week_s_Lost_Emails</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>SPAM__c</columns>
        <columns>Recipient__c</columns>
        <columns>Sender__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>notEqual</operation>
            <value>toonice</value>
        </filters>
        <filters>
            <field>Subject__c</field>
            <operation>notContain</operation>
            <value>Debug Log for Case Inbound Email Handler</value>
        </filters>
        <label>1-This Week's Lost Emails</label>
    </listViews><listViews>
        <fullName>This_Week_s_Lost_Emails_SPAM</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>SPAM__c</columns>
        <columns>Recipient__c</columns>
        <columns>Sender__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>notEqual</operation>
            <value>toonice</value>
        </filters>
        <filters>
            <field>Recipient__c</field>
            <operation>equals</operation>
            <value>courses@asu.edu</value>
        </filters>
        <label>This Week's Lost Emails - SPAM</label>
    </listViews><listViews>
        <fullName>Today_s_Lost_Email_Records</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>SPAM__c</columns>
        <columns>Recipient__c</columns>
        <columns>Sender__c</columns>
        <columns>Cause__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today's Lost Email Records</label>
    </listViews><listViews>
        <fullName>president_asu_edu</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Recipient__c</columns>
        <columns>Sender__c</columns>
        <columns>Cause__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recipient__c</field>
            <operation>equals</operation>
            <value>president@asu.edu</value>
        </filters>
        <label>president@asu.edu</label>
    </listViews><listViews>
        <fullName>sponsored_asu_edu</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Recipient__c</columns>
        <columns>Sender__c</columns>
        <columns>Cause__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recipient__c</field>
            <operation>equals</operation>
            <value>sponsored@asu.edu</value>
        </filters>
        <label>sponsored@asu.edu</label>
    </listViews></CustomObject>